# kafka_learning

./: docker-compose.yml  main.py  pyproject.toml
api/: routers.py
brokers/: kafka_broker.py  scheduler.py  tasks.py
models/: models.py
