[tool.poetry]
name = "kafka-learning"
version = "0.1.0"
description = ""
authors = ["Vlad Mironov <73903449+vv-m@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
faststream = "^0.5.30"
aiokafka = "^0.12.0"
apscheduler = "^3.10.4"
pydantic = { version = "^2.9.2", extras = ["email"] }  # Добавлен `extras = ["email"]`

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"